fix: [ASL-4781] PDF protocol details alignment issue

--- a/packages/asl-pages/pages/common/assets/sass/pdf/index.scss
+++ b/packages/asl-pages/pages/common/assets/sass/pdf/index.scss
@@ -92,6 +92,7 @@ section > h2 {
     border: none;
     display: block;
     width: 100%;
+    text-align: left;
   }
   
   h3 {
